# kittyscope-web

./: README.md  pyproject.toml
src/web/: db.sqlite3
src/web/fileanalyzer/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/web/fileanalyzer/migrations/: 0001_initial.py  0002_finderobject_height_finderobject_pages_count_and_more.py  0003_finderobject_file_type.py  0004_alter_finderobject_extension_and_more.py
src/web/fileanalyzer/services/: finder.py  research_router.py  researchers.py
src/web/fileanalyzer/static/fileanalyzer/css/: dashboard.css  index.css
src/web/fileanalyzer/templates/fileanalyzer/: base.html  dashboard.html  index.html  top_by_pages.html  top_by_res.html  top_by_size.html
src/web/fileanalyzer/utils/: __init__.py  file_types.py  static_texts.py
src/web/web/: settings.py  urls.py
